compliance-servicemesh/load-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-test
spec:
  containers:
  - name: load
    image: busybox
    command: ["sh","-c","while true; do wget -q -O- http://productpage:9080/productpage; sleep 1; done"]
