compliance-servicemesh/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/bookinfo-productpage
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
